--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,15 +7,16 @@ body
     margin: 0
     padding:0
 }
+
 #container
 {
-width: 70%;
+background-color: chartreuse ;
+    width: 70%;
 padding: 1em;
 text-align: center;
 border: 1px solid #DDD;
 margin: auto;
 }
-
 
 #container h1
 {
